# fmincon-with-Cpp

./: CMakeLists.txt  README.md  example.cpp  example_with_gra.cpp  example_without_gra.cpp  test.cpp
include/: sci_arma.h
src/: BFGS.cpp  Powell.cpp  Powell_modified.cpp  Rosenbrock.cpp  fmincon.cpp  sci_arma.cpp
src/fmincon/: BFGS.cpp  Powell.cpp  Powell_modified.cpp  Rosenbrock.cpp  fmincon.cpp  fmincon.cpp.legacy
src/linprog/: find_x0.cpp  karmarkar.cpp  linprog.cpp
